--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <section class="card">
-    <img class="card-img" src="images\image-qr-code.png" alt="qr">
+    <img class="card-img" src="image-qr-code.png" alt="qr">
     <h1 class="text-bold">Improve your front-end skills by building projects</h1>
     <p class="text-regular">
       Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
